--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -156,6 +156,9 @@
 .h-100dvh {
   height: 100dvh !important;
 }
+.max-h-100{
+  max-height: 100% !important;
+}
 
 .col-1fr-auto {
   grid-template-columns: 1fr auto !important;
@@ -303,11 +306,13 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     height: 100%;
   }
 
-  .left-sidebar-container .price-article,
-  .left-sidebar-container .calendar-article,
-  .left-sidebar-container .inbox-article,
-  .left-sidebar-container .settings-article,
-  .left-sidebar-container .customize-article {
+  /*.left-sidebar-container .price-article,*/
+  /*.left-sidebar-container .calendar-article,*/
+  /*.left-sidebar-container .inbox-article,*/
+  /*.left-sidebar-container .settings-article,*/
+  /*.left-sidebar-container .customize-article {*/
+
+  .left-sidebar-container > *{
     grid-area: 1/1;
     z-index: 1;
     max-width: 100%;
@@ -2453,6 +2458,60 @@ div.gslide-media.gslide-inline {
 /*-----------------------------------------------
 |   Left panel articles content
 -----------------------------------------------*/
+
+/*-----------------------------------------------
+    |   Notification article Content
+    -----------------------------------------------*/
+
+.notification-article {
+  /*55px tablet-desktop , 79 mobile*/
+  --notif-header-height: 5rem;
+  /*--notif-card-footer-height: 2.25rem;*/
+  height: 100%;
+}
+
+.notification-article  .card-header {
+  padding: .5rem 1rem;
+}
+
+.notification-article  .card-header > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .5rem;
+}
+
+.notification-article  .card-header > div > :nth-child(2){
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.notification-article .card-notification {
+  /*max-height: calc(100dvh - var(--notif-header-height));*/
+}
+
+@media (min-width: 550px) {
+  .notification-article  .card-header > div {
+    flex-direction: row;
+    padding: .8rem 1rem;
+  }
+
+  .notification-article  .card-header > div > *{
+    width: fit-content;
+  }
+
+  .notification-article  .card-header > div > :nth-child(2){
+    gap:.5rem
+  }
+
+  @container side-panel (max-width: 405px) {
+
+    .notification-article  .card-header > div {
+      padding: .5rem
+    }
+  }
+}
 
 /*-----------------------------------------------
     |   inbox article content
