--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -156,7 +156,7 @@
 .h-100dvh {
   height: 100dvh !important;
 }
-.max-h-100{
+.max-h-100 {
   max-height: 100% !important;
 }
 
@@ -178,10 +178,9 @@
 
 /*hiding the tooltip when hover is not available*/
 @media (hover: none) {
-  .tooltip.bs-tooltip-auto.fade.show[role="tooltip"]{
+  .tooltip.bs-tooltip-auto.fade.show[role="tooltip"] {
     display: none !important;
   }
-
 }
 
 /*-----------------------------------------------
@@ -237,7 +236,9 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     list-style: none;
     padding: 0.5rem 0.3rem 0;
     margin-bottom: 0.5rem;
-    overflow: hidden;
+    /*overflow: hidden;*/
+    overflow-y: clip;
+    overflow-x: visible;
     transition: gap 0.2s ease-in-out;
   }
 
@@ -254,6 +255,14 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-property: min-height, max-height, transform, opacity;
     transition-timing-function: ease-in-out;
     transition-duration: 0.2s;
+  }
+
+  .left-nav-bar ul li.dropstart:nth-child(1) {
+    z-index: 10;
+  }
+
+  .left-nav-bar ul li.dropstart:nth-child(2) {
+    z-index: 9;
   }
 
   .left-nav-bar ul li button,
@@ -312,7 +321,7 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
   /*.left-sidebar-container .settings-article,*/
   /*.left-sidebar-container .customize-article {*/
 
-  .left-sidebar-container > *{
+  .left-sidebar-container > * {
     grid-area: 1/1;
     z-index: 1;
     max-width: 100%;
@@ -340,6 +349,14 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
+  .navbar-toggle ~ .page-wrapper > .left-nav-bar {
+    overflow: hidden;
+  }
+
+  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar {
+    overflow: visible;
+  }
+
   .navbar-toggle.panel-content
     ~ .page-wrapper
     > .left-nav-bar
@@ -354,8 +371,8 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     opacity: 1;
     max-height: 100%;
     min-height: 45px;
-    overflow: hidden;
-
+    /*overflow: hidden;*/
+    overflow: visible;
     transition-delay: 0.11s;
   }
 
@@ -467,6 +484,14 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     overflow: hidden;
   }
 
+  .navbar-toggle ~ .page-wrapper > .left-nav-bar {
+    overflow: hidden;
+  }
+
+  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar {
+    overflow: visible;
+  }
+
   .navbar-toggle.nav-only ~ .page-wrapper > .left-sidebar-container {
     transform: translateX(100%);
     opacity: 0;
@@ -545,7 +570,9 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     list-style: none;
     padding: 0.5rem 0.3rem 0;
     margin-bottom: 0.5rem;
-    overflow: hidden;
+    /*overflow: hidden;*/
+    overflow-y: clip;
+    overflow-x: visible;
   }
 
   .left-nav-bar ul li {
@@ -741,8 +768,8 @@ section {
     /*if navbar brand needs to be beside the menu trigger*/
     /*grid-template-columns: auto 1fr auto;*/
     grid-template-areas:
-    "menu brand search"
-    "dropdown dropdown dropdown";
+      "menu brand search"
+      "dropdown dropdown dropdown";
   }
 
   .navbar.navbar-overrides > .navbar-toggler-humburger-icon {
@@ -751,7 +778,7 @@ section {
 
   .navbar.navbar-overrides > .navbar-brand {
     width: fit-content;
-    grid-area: brand
+    grid-area: brand;
   }
 
   .navbar.navbar-overrides .navbar-brand img {
@@ -766,7 +793,7 @@ section {
     grid-area: dropdown;
   }
 
-  .navbar.navbar-overrides  .sub-top-nav-mobile > *{
+  .navbar.navbar-overrides .sub-top-nav-mobile > * {
     padding-left: 5px;
     padding-right: 5px;
   }
@@ -781,7 +808,6 @@ section {
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-
   .navbar.navbar-overrides {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -2496,18 +2522,18 @@ div.gslide-media.gslide-inline {
   height: 100%;
 }
 
-.notification-article  .card-header {
-  padding: .5rem 1rem;
+.notification-article .card-header {
+  padding: 0.5rem 1rem;
 }
 
-.notification-article  .card-header > div {
+.notification-article .card-header > div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
-.notification-article  .card-header > div > :nth-child(2){
+.notification-article .card-header > div > :nth-child(2) {
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
@@ -2518,23 +2544,22 @@ div.gslide-media.gslide-inline {
 }
 
 @media (min-width: 550px) {
-  .notification-article  .card-header > div {
+  .notification-article .card-header > div {
     flex-direction: row;
-    padding: .8rem 1rem;
+    padding: 0.8rem 1rem;
   }
 
-  .notification-article  .card-header > div > *{
+  .notification-article .card-header > div > * {
     width: fit-content;
   }
 
-  .notification-article  .card-header > div > :nth-child(2){
-    gap:.5rem
+  .notification-article .card-header > div > :nth-child(2) {
+    gap: 0.5rem;
   }
 
   @container side-panel (max-width: 405px) {
-
-    .notification-article  .card-header > div {
-      padding: .5rem
+    .notification-article .card-header > div {
+      padding: 0.5rem;
     }
   }
 }
@@ -2897,8 +2922,7 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
 
 /*------------- email panel area  ------------*/
 
-
-.email-nav-body   {
+.email-nav-body {
   overflow-x: clip;
 }
 .email-nav-body > div {
@@ -2909,22 +2933,24 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
 .email-nav-body > div .btn-group {
   /* initially 100% + the matching padding of the parent */
   right: 100%;
-  transform: translateX(calc(100% + (var(--falcon-gutter-x) * -0.5)) );
+  transform: translateX(calc(100% + (var(--falcon-gutter-x) * -0.5)));
   transition: transform 200ms linear;
 }
 
 .email-nav-body > div .btn-group > *:not(:first-child) {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 200ms linear , visibility 200ms linear ;
+  transition:
+    opacity 200ms linear,
+    visibility 200ms linear;
   transition-delay: -100ms;
 }
 
-.email-nav-body .btn-group button[data-trigger]  {
+.email-nav-body .btn-group button[data-trigger] {
   box-shadow: none;
 }
 
-.email-nav-body .btn-group button[data-trigger] > svg{
+.email-nav-body .btn-group button[data-trigger] > svg {
   transition: transform 200ms linear;
 }
 
@@ -2937,11 +2963,11 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   transition-delay: 100ms;
 }
 
-.email-nav-body .btn-group.show-opts button[data-trigger]  {
+.email-nav-body .btn-group.show-opts button[data-trigger] {
   background-color: var(--falcon-gray-200) !important;
   box-shadow: var(--falcon-btn-box-shadow);
 }
-.email-nav-body .btn-group.show-opts button[data-trigger] > svg{
+.email-nav-body .btn-group.show-opts button[data-trigger] > svg {
   color: #007bff;
   transform: rotate(180deg);
 }
@@ -3072,11 +3098,10 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   .non-hover-show-button {
     display: inline-block !important;
   }
-  .email-nav-body .btn-group button[data-trigger]  {
+  .email-nav-body .btn-group button[data-trigger] {
     color: var(--falcon-btn-hover-color);
     background: transparent !important;
   }
-
 }
 
 /* side panel media queries */
@@ -3087,10 +3112,11 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   @container side-panel (max-width: 405px) {
     .email-nav-body > div {
       display: grid;
-      grid-template-areas: "checkbox content"
-    "date date";
+      grid-template-areas:
+        "checkbox content"
+        "date date";
       column-gap: 1rem;
-      row-gap: .5rem;
+      row-gap: 0.5rem;
     }
 
     .email-nav-body > div > :nth-child(1) {
@@ -3098,7 +3124,7 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
       padding: 0;
     }
 
-    .email-nav-body > div > :nth-child(1) .form-check{
+    .email-nav-body > div > :nth-child(1) .form-check {
       padding: 0;
     }
 
@@ -3106,8 +3132,8 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
       display: none;
     }
 
-    .email-nav-body > div > :nth-child(1) .form-check .form-check-input{
-      margin:0
+    .email-nav-body > div > :nth-child(1) .form-check .form-check-input {
+      margin: 0;
     }
 
     .email-nav-body > div > :nth-child(2) {
@@ -3123,10 +3149,10 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
     }
 
     .email-nav-body > div > :nth-child(3) {
-      --_date-margin: .25rem; /* to align with the star icon*/
+      --_date-margin: 0.25rem; /* to align with the star icon*/
       grid-area: date;
       flex-direction: row !important;
-      gap: .5rem;
+      gap: 0.5rem;
     }
 
     .email-nav-body > div > :nth-child(3) > .btn-group {
@@ -3142,8 +3168,6 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
       display: inline-block !important;
       margin: 0;
     }
-
-
   }
 
   /* if panel is in full screen */
@@ -3158,7 +3182,6 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
       transform: translateX(0);
     }
   }
-
 }
 
 @container side-panel (min-width: 768px) {
@@ -3168,7 +3191,7 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   }
 
   .email-nav-body > div .btn-group.show-opts {
-    transform: translateX(.8rem);
+    transform: translateX(0.8rem);
   }
 }
 
